use fancy new shapeless Strict support